# find-me-a-job

./: .env  .env.example  .gitignore  README.md  crawler.py  job.py  main.py  output.py  pyproject.toml  resume.py  utils.py
data/: resume.txt
input/: example.txt
